--- a/styles/tah-template-style.css
+++ b/styles/tah-template-style.css
@@ -482,3 +482,260 @@
 .tah-subtitle > .tah-icon > :is(.fa, .fas) {
     text-shadow: var(--tah-text-shadow);
 }
+
+/*Ajout OG pour le DicePrompt
+*/
+.rollable {
+&:hover,
+&:focus {
+    color: #000;
+    text-shadow: 0 0 10px red;
+    cursor: pointer;
+}
+}
+/*
+.app-dice-prompt {
+min-width: 500px;
+min-height: 300px;
+}
+.app-dice-prompt .window-content {
+background-color: #f1ede8;
+background-position: -21.3333333333px -16px;
+background-size: 64px 128px;
+background-repeat: repeat;
+background-image: linear-gradient(to right, #e7e3de 0px, transparent 2px), linear-gradient(to bottom, #e7e3de 0px, transparent 2px, transparent 50%, #e7e3de 50%, transparent calc(50% + 2px)), linear-gradient(to bottom right, transparent 0%, transparent 50%, #e7e3de calc(50% - 1px), #e7e3de calc(50% + 1px), transparent calc(50% + 1px)), linear-gradient(to top right, transparent 0%, transparent 50%, #e7e3de calc(50% - 1px), #e7e3de calc(50% + 1px), transparent calc(50% + 1px));
+}
+
+.dice-prompt[data-v-hudgene] {
+display: grid;
+grid-template-columns: 2fr 1fr 2fr;
+grid-template-rows: auto 1fr auto auto;
+gap: 0.5em;
+}
+.dice-prompt header {
+display: flex;
+flex-direction: column;
+flex-wrap: nowrap;
+grid-column: 1/span all;
+grid-row: 1/span 1;
+}
+.dice-prompt header .hint {
+font-family: "Roboto", serif;
+font-size: 0.8rem;
+color: #384455;
+}
+.dice-prompt .preview {
+grid-column: 1/span all;
+grid-row: 2/span 1;
+}
+.dice-prompt [name=characteristic],
+.dice-prompt [name=skill] {
+grid-row: 3/span 1;
+}
+.dice-prompt [name=characteristic] {
+grid-column: 1/span 1;
+}
+.dice-prompt [name=skill] {
+grid-column: 2/span 2;
+}
+.dice-prompt .approximation {
+grid-column: 1/span 2;
+grid-row: 4/span 1;
+}
+.dice-prompt .approximation label {
+margin-right: 1rem;
+}
+.dice-prompt .roll-button {
+grid-column: 3/span 1;
+grid-row: 4/span 1;
+}
+.dice-prompt header {
+color: #2b4b73;
+font-family: "Bebas Neue", sans-serif;
+font-size: 2em;
+}
+.dice-prompt .roll-button {
+color: #2b4b73;
+font-family: "Bebas Neue", sans-serif;
+font-size: 1.25em;
+}
+.dice-prompt .preview {
+display: grid;
+grid-template-columns: 1fr auto;
+grid-template-rows: 1fr 1fr;
+gap: 0.5em;
+background: linear-gradient(to bottom, black -40%, #2b4b73 20%, #1d334e 70%, black 130%);
+border-top: 1px solid black;
+border-bottom: 1px solid black;
+margin-left: -0.5rem;
+margin-right: -0.5rem;
+padding-left: 0.5em;
+}
+.dice-prompt .preview .positive,
+.dice-prompt .preview .negative {
+grid-column: 1/span 1;
+display: flex;
+align-items: center;
+flex-direction: row;
+flex-wrap: wrap;
+}
+.dice-prompt .preview .positive {
+grid-row: 1/span 1;
+}
+.dice-prompt .preview .negative {
+grid-row: 2/span 1;
+}
+.dice-prompt .preview .dice-box {
+grid-column: 2/span 1;
+grid-row: 1/span all;
+background: rgba(0, 0, 0, 0.25);
+border-top-left-radius: 0.5rem;
+border-bottom-left-radius: 0.5rem;
+color: white;
+padding: 0.5em;
+column-gap: 0.25em;
+align-items: center;
+justify-items: center;
+font-size: 1.25em;
+display: grid;
+grid-template-columns: repeat(3, auto);
+}
+.dice-prompt .preview .dice-box a {
+display: inline-flex;
+flex-direction: row;
+flex-wrap: nowrap;
+align-items: flex-start;
+font-family: "Genesys Symbols", sans-serif;
+}
+.dice-prompt .preview .dice-box a[data-die=A] {
+color: #41ad49;
+}
+.dice-prompt .preview .dice-box a[data-die=P] {
+color: #fff200;
+}
+.dice-prompt .preview .dice-box a[data-die=B] {
+color: #72cddc;
+}
+.dice-prompt .preview .dice-box a[data-die=D] {
+-webkit-text-stroke: 0.5px white;
+//text-stroke: 0.5px white;
+color: #522380;
+}
+.dice-prompt .preview .dice-box a[data-die=D] i {
+-webkit-text-stroke: 0 transparent;
+//text-stroke: 0 transparent;
+}
+.dice-prompt .preview .dice-box a[data-die=C] {
+-webkit-text-stroke: 0.5px white;
+//text-stroke: 0.5px white;
+color: #761213;
+}
+.dice-prompt .preview .dice-box a[data-die=C] i {
+-webkit-text-stroke: 0 transparent;
+//text-stroke: 0 transparent;
+}
+.dice-prompt .preview .dice-box a[data-die=S] {
+-webkit-text-stroke: 0.5px white;
+//text-stroke: 0.5px white;
+color: #1e1e1e;
+}
+.dice-prompt .preview .dice-box a[data-die=S] i {
+-webkit-text-stroke: 0 transparent;
+//text-stroke: 0 transparent;
+}
+.dice-prompt .preview .dice-box i {
+color: white;
+position: relative;
+font-size: 0.5em;
+top: -0.25em;
+}
+.dice-prompt .preview .die,
+.dice-prompt .preview .symbol {
+display: inline;
+font-family: "Genesys Symbols", sans-serif;
+font-size: 2rem;
+color: white;
+cursor: pointer;
+}
+.dice-prompt .preview .die:hover,
+.dice-prompt .preview .symbol:hover {
+text-shadow: 0 0 0 #fff, 0 0 1px #fff, 0 0 2px #e60073, 0 0 3px #e60073, 0 0 4px #e60073, 0 0 5px #e60073, 0 0 6px #e60073;
+}
+.dice-prompt .preview .die {
+margin-left: -0.1em;
+margin-right: -0.05em;
+margin-top: 0.1em;
+-webkit-text-stroke: 2px black;
+//text-stroke: 2px black;
+font-size: 2.5rem;
+}
+.dice-prompt .preview .die.die-A {
+color: #41ad49;
+}
+.dice-prompt .preview .die.die-D {
+color: #522380;
+}
+.dice-prompt .preview .die.die-P {
+color: #fff200;
+}
+.dice-prompt .preview .die.die-C {
+color: #761213;
+}
+.dice-prompt .preview .die.die-B {
+color: #72cddc;
+}
+.dice-prompt .preview .die.die-S {
+color: #1e1e1e;
+}/**
+* Genesys Glyphs & Dice is available under the MIT License (https://github.com/themensch/FFG-Genesys-Glyphs-and-Dice/blob/master/LICENSE)
+*
+* The customized GenesysSymbols-Regular-Ligatures font is created using symbols from this font.
+*/
+/* @font-face {
+font-family: "Genesys Symbols";
+font-style: normal;
+font-weight: 400;
+font-display: swap;
+src: url("assets/fonts/GenesysSymbols-Regular-Ligatures.woff2") format("woff2");
+}
+@font-face {
+font-family: "Genesys Symbols - Magical Girl";
+font-style: normal;
+font-weight: 400;
+font-display: swap;
+src: url("assets/fonts/GenesysSymbols-MagicalGirl-Regular-Ligatures.woff2") format("woff2");
+}
+.font-genesys-symbols {
+font-family: "Genesys Symbols", sans-serif;
+min-height: 24px;
+}
+.font-genesys-symbols.mg {
+font-family: "Genesys Symbols - Magical Girl", "Genesys Symbols", sans-serif;
+}
+.font-genesys-symbols.nolig {
+font-variant-ligatures: none;
+}
+.die {
+-webkit-text-stroke: 1px black;
+//text-stroke: 1px black;
+font-style: normal;
+font-family: "Genesys Symbols", sans-serif;
+}
+.die.die-A {
+color: #41ad49;
+}
+.die.die-D {
+color: #522380;
+}
+.die.die-P {
+color: #fff200;
+}
+.die.die-C {
+color: #761213;
+}
+.die.die-B {
+color: #72cddc;
+}
+.die.die-S {
+color: #1e1e1e;
+} */
